roast potatoes & pork
Signed-off-by: paramarco <paramarco@gmail.com>

--- a/client/htm/cancelPayment.html
+++ b/client/htm/cancelPayment.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<img class="displayed" src="./htm/img/license-payment-fail_300x200.png" alt="payment done">
+			<img class="displayed" src="../htm/img/license-payment-fail_300x200.png" alt="payment done">
 		</div>
 
 	</body>
