--- a/client/index.html
+++ b/client/index.html
@@ -41,55 +41,20 @@
 				</ul>
 
 			</div>
-		</div>
-		
-	 <!--   
-	    <script src="js/jquery-1.10.2.min.js"></script>
-        <script src="js/jquery.mobile.mobileinit.js"></script> 
-        <script src="js/jquery.mobile-1.4.5.min.js"></script>
-        <script src="js/jquery.browser.min.0.1.0.js"></script>
-        <script src="js/jquery.picedit-1.0.0.js"></script>
-        <script src="js/jquery.emojipicker.js"></script>
-        <script src="js/jquery.emojipicker.tw.js"></script>
-        <script src="js/jquery.debouncedresize.js"></script>
-		-->
-		<script src="js/bundle1.min.js"></script>
+		</div>		
 		
 		<!-- WARNING: cordova.js only for apache cordova build --> 
 		<script src="cordova.js"></script>
         <!-- WARNING: there are some ad-hoc modifications on forge.bundle.js due to web Worker compatibilities -->        
         <script id="worker_1" type="text/js-worker"> importScripts(base_url + '/js/prime.worker.js');  </script>
-        <script src="js/bundle2.min.js"></script>
-<!--
-	    <script src='js/fastClick.min.js'></script>        
-        <script src="js/twemoji.min.js"></script>
-		<script src="js/config.js"></script>
-		<script src="js/log4javascript-1.4.13.js"></script>        
-    	<script src="js/photoswipe.min.js"></script>
-		<script src="js/photoswipe-ui-default.min.js"></script>	
-		<script src="js/jsrsasign-4.1.4-all-min.js"></script>	
-		<script src="js/json-sans-eval-min.js"></script>
-		<script src="js/jws-3.0.min.js"></script>		
-		<script src="js/forge.bundle-0.7.0.min.js"></script>
-    -->
-        <!-- WARNING: js/IndexedDBShim.old.js for windows phone build -->   
-       <!--     
-		<script src="js/indexeddbshim.min-2.2.1.js"></script>        
-        <script src="js/cldr-0.4.3.js"></script>
-	    <script src="js/cldr/event.js"></script>
-	    <script src="js/cldr/supplemental.js"></script>
-	    <script src="js/globalize-1.1.0.js"></script>
-	    <script src="js/globalize/date_number.min.js"></script>        		
-		<script src="js/socket.io-1.3.5.min.js"></script>			
-	    <script src="js/pickadate.js-3.5.6/picker.js"></script>
-	    <script src="js/pickadate.js-3.5.6/picker.date.js"></script>
-	    <script src="js/pickadate.js-3.5.6/picker.time.js"></script>
-        <script src="js/pickadate.js-3.5.6/legacy.js"></script>	
-        <script src="js/easyrtc-1.0.15.min.js"></script>   		    
-		  <script src="js/application.js"></script>	      
--->
+        <!-- WARNING: js/IndexedDBShim.old.js for windows phone build --> 
+        <script src="js/lib-1.min.js"></script>
+        <script src="js/lib-2.min.js"></script>
+        <script src="js/lib-3.min.js"></script>
+        <script src="js/lib-4.min.js"></script>
 	    <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-
-    <script src="js/app.min.js"></script>
+	    <script src="js/app.min.js"></script>
+	    
+	    
     </body>
 </html>
