--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
     <title>knet</title>
 </head>
 
@@ -32,7 +31,6 @@
         </div>
     </div>
 
-    <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
     <script type="text/javascript" src="js/fastClick.min.js"></script>
     <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="js/jquery.mobile.mobileinit.min.js"></script>
@@ -60,8 +58,9 @@
     <script type="text/javascript" src="js/pickadate.js-3.5.6/picker.date.min.js"></script>
     <script type="text/javascript" src="js/pickadate.js-3.5.6/picker.time.min.js"></script>
     <script type="text/javascript" src="js/pickadate.js-3.5.6/legacy.min.js"></script>
-    <script type="text/javascript" src="js/easyrtc-1.0.15..minjs"></script>
+    <script type="text/javascript" src="js/easyrtc-1.0.15.min.js"></script>
     <script type="text/javascript" src="js/forge.bundle-0.7.0.min.js"></script>
+    <script type="text/javascript" src="js/leaflet-1.0.1.min.js"></script>
     <script type="text/javascript" src="js/config.min.js"></script>
     <script type="text/javascript" src="js/app.min.js"></script>
 
