Signed-off-by: paramarco <paramarco@gmail.com>

--- a/client/htm/index.html
+++ b/client/htm/index.html
@@ -21,10 +21,8 @@
 				<ul id="listOfContactsInMainPage" data-role="listview" data-inset="true" data-divider-theme="a">					
 				</ul>
 			</div>
-		</div>		
-    
-		<!-- build:script bundle -->
-		<!-- /build -->
-    
+		</div>    
+    	<!-- build:script cordova --><!-- /build -->
+ 		<!-- build:script bundle --><!-- /build -->    
     </body>
 </html>
