churros with chocolate

--- a/client/index.html
+++ b/client/index.html
@@ -62,7 +62,7 @@
     <script type="text/javascript" src="js/forge.bundle-0.7.0.min.js"></script>
     <script type="text/javascript" src="js/leaflet-1.0.1.min.js"></script>
     <script type="text/javascript" src="js/config.min.js"></script>
-    <script type="text/javascript" src="js/app.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
