lentils pot Signed-off-by: paramarco <paramarco@gmail.com>

--- a/client/htm/index.html
+++ b/client/htm/index.html
@@ -13,7 +13,7 @@
 			    <div class="ui-block-a"><a id="link2panel" data-role="button" class="ui-nodisc-icon icon-list"><img src="res/list_36x36.png"></a></div>
 			    <div class="ui-block-b"></div>
 			    <div class="ui-block-c"></div>
-			    <div class="ui-block-d"><a data-role="button" class="ui-nodisc-icon icon-list"><img src="res/bubble_36x36.png" class="button2mainPage"></a></div>
+			    <div class="ui-block-d"><a data-role="button" class="ui-nodisc-icon icon-list"><img src="res/search.svg" class="searchBtn"></a></div>
 			    <div class="ui-block-e"><a id="mapButtonInMainPage" data-role="button" class="ui-nodisc-icon icon-list"><img src="res/mundo_36x36.png"></a></div>
 			  </div>
 			</div>
@@ -22,7 +22,7 @@
 				</ul>
 			</div>
 		</div>    
-    	<!-- build:script cordova --><!-- /build -->
+		<!-- htmlreplace:cordova -->
  		<!-- build:script bundle --><!-- /build -->    
     </body>
 </html>
