--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
                 <div class="ui-block-b"></div>
                 <div class="ui-block-c"></div>
                 <div class="ui-block-d">
-                    <a data-role="button" class="ui-nodisc-icon icon-list"><img src="res/bubble_36x36.png" class="button2mainPage"></a>
+                    <a data-role="button" class="ui-nodisc-icon icon-list"><img src="res/search.svg" class="searchBtn"></a>
                 </div>
                 <div class="ui-block-e">
                     <a id="mapButtonInMainPage" data-role="button" class="ui-nodisc-icon icon-list"><img src="res/mundo_36x36.png"></a>
@@ -30,7 +30,7 @@
             </ul>
         </div>
     </div>
-
+    <!-- htmlreplace:cordova -->
     <script type="text/javascript" src="js/fastClick.min.js"></script>
     <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="js/jquery.mobile.mobileinit.min.js"></script>
