--- a/client/htm/index.html
+++ b/client/htm/index.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="utf-8" />
        	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
-		<link rel="stylesheet" type="text/css" href="css/style.min.css"  />	
+		<!-- build:style bundle --><!-- /build -->
         <title>knet</title>
     </head>
 	<body>
