--- a/client/htm/index.html
+++ b/client/htm/index.html
@@ -10,11 +10,11 @@
 		<div data-role="page" data-theme="a" id="MainPage">
 			<div data-role="header" data-position="fixed">							
 			  <div class="ui-grid-d">
-			    <div class="ui-block-a"><a id="link2panel" data-role="button" class="ui-nodisc-icon icon-list"><img src="res/list_36x36.png"></a></div>
+			    <div class="ui-block-a"><a id="link2panel" data-role="none" class="ui-btn"><img src="res/list_36x36.png"></a></div>
 			    <div class="ui-block-b"></div>
 			    <div class="ui-block-c"></div>
-			    <div class="ui-block-d"><a data-role="button" class="ui-nodisc-icon icon-list"><img src="res/search.svg" class="searchBtn"></a></div>
-			    <div class="ui-block-e"><a id="mapButtonInMainPage" data-role="button" class="ui-nodisc-icon icon-list"><img src="res/mundo_36x36.png"></a></div>
+			    <div class="ui-block-d"><a data-role="none" class="ui-btn"><img src="res/search.png" class="searchBtn"></a></div>
+			    <div class="ui-block-e"><a id="mapButtonInMainPage" data-role="none" class="ui-btn"><img src="res/mundo_36x36.png"></a></div>
 			  </div>
 			</div>
 			<div id="contentOfMainPage" data-role="content" data-theme="a">				
