--- a/client/index.html
+++ b/client/index.html
@@ -4,18 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
-    <link type="text/css" rel="stylesheet" href="css/jquery.style.1.4.2.css" />
-    <link type="text/css" rel="stylesheet" href="css/jquery.mobile.icons.min.css" />
-    <link type="text/css" rel="stylesheet" href="css/jquery.mobile.structure-1.4.2.css" />
-    <link type="text/css" rel="stylesheet" href="css/jquery.emojipicker.css" />
-    <link type="text/css" rel="stylesheet" href="css/picedit.css" />
-    <link type="text/css" rel="stylesheet" href="css/leaflet-1.0.1.css" />
-    <link type="text/css" rel="stylesheet" href="css/application.css" />
-    <link type="text/css" rel="stylesheet" href="css/photoswipe-4.0.8.css" />
-    <link type="text/css" rel="stylesheet" href="css/photoswipe-skin-4.0.8.css" />
-    <link type="text/css" rel="stylesheet" href="css/pickadate.js-3.5.6/default.css" />
-    <link type="text/css" rel="stylesheet" href="css/pickadate.js-3.5.6/default.time.css" />
-    <link type="text/css" rel="stylesheet" href="css/pickadate.js-3.5.6/default.date.css" />
+    <link type="text/css" rel="stylesheet" href="css/style.min.css" />
     <title>knet</title>
 </head>
 
@@ -41,39 +30,39 @@
             </ul>
         </div>
     </div>
-    <!-- htmlreplace:cordova -->
-    <script type="text/javascript" src="js/fastClick.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/fastClick.min.js"></script>
     <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="js/jquery.mobile.mobileinit.js"></script>
-    <script type="text/javascript" src="js/jquery.browser.min.0.1.0.js"></script>
+    <script type="text/javascript" src="js/jquery.mobile.mobileinit.min.js"></script>
     <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
-    <script type="text/javascript" src="js/jquery.picedit-1.0.0.js"></script>
-    <script type="text/javascript" src="js/jquery.emojipicker.js"></script>
-    <script type="text/javascript" src="js/jquery.emojipicker.tw.js"></script>
-    <script type="text/javascript" src="js/jquery.debouncedresize.js"></script>
+    <script type="text/javascript" src="js/jquery.browser.min.0.1.0.js"></script>
+    <script type="text/javascript" src="js/jquery.emojipicker.min.js"></script>
+    <script type="text/javascript" src="js/jquery.emojipicker.tw.min.js"></script>
+    <script type="text/javascript" src="js/jquery.debouncedresize.min.js"></script>
+    <script type="text/javascript" src="js/jquery.picedit-1.0.0.min.js"></script>
     <script type="text/javascript" src="js/twemoji.min.js"></script>
-    <script type="text/javascript" src="js/log4javascript-1.4.13.js"></script>
+    <script type="text/javascript" src="js/log4javascript-1.4.13.min.js"></script>
     <script type="text/javascript" src="js/photoswipe.min.js"></script>
     <script type="text/javascript" src="js/photoswipe-ui-default.min.js"></script>
     <script type="text/javascript" src="js/jsrsasign-4.1.4-all-min.js"></script>
     <script type="text/javascript" src="js/json-sans-eval-min.js"></script>
     <script type="text/javascript" src="js/jws-3.0.min.js"></script>
     <script type="text/javascript" src="js/indexeddbshim.min-2.2.1.js"></script>
-    <script type="text/javascript" src="js/cldr-0.4.3.js"></script>
-    <script type="text/javascript" src="js/cldr/event.js"></script>
-    <script type="text/javascript" src="js/cldr/supplemental.js"></script>
-    <script type="text/javascript" src="js/globalize-1.1.0.js"></script>
+    <script type="text/javascript" src="js/cldr-0.4.3.min.js"></script>
+    <script type="text/javascript" src="js/cldr/event.min.js"></script>
+    <script type="text/javascript" src="js/cldr/supplemental.min.js"></script>
+    <script type="text/javascript" src="js/globalize-1.1.0.min.js"></script>
     <script type="text/javascript" src="js/globalize/date_number.min.js"></script>
-    <script type="text/javascript" src="js/socket.io-1.3.5.js"></script>
-    <script type="text/javascript" src="js/pickadate.js-3.5.6/picker.js"></script>
-    <script type="text/javascript" src="js/pickadate.js-3.5.6/picker.date.js"></script>
-    <script type="text/javascript" src="js/pickadate.js-3.5.6/picker.time.js"></script>
-    <script type="text/javascript" src="js/pickadate.js-3.5.6/legacy.js"></script>
-    <script type="text/javascript" src="js/easyrtc-1.0.15.js"></script>
-    <script type="text/javascript" src="js/forge.bundle-0.7.0.js"></script>
-    <script type="text/javascript" src="js/leaflet-1.0.1.js"></script>
-    <script type="text/javascript" src="js/config.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/socket.io-1.3.5.min.js"></script>
+    <script type="text/javascript" src="js/pickadate.js-3.5.6/picker.min.js"></script>
+    <script type="text/javascript" src="js/pickadate.js-3.5.6/picker.date.min.js"></script>
+    <script type="text/javascript" src="js/pickadate.js-3.5.6/picker.time.min.js"></script>
+    <script type="text/javascript" src="js/pickadate.js-3.5.6/legacy.min.js"></script>
+    <script type="text/javascript" src="js/easyrtc-1.0.15.min.js"></script>
+    <script type="text/javascript" src="js/forge.bundle-0.7.0.min.js"></script>
+    <script type="text/javascript" src="js/leaflet-1.0.1.min.js"></script>
+    <script type="text/javascript" src="js/config.min.js"></script>
+    <script type="text/javascript" src="js/app.min.js"></script>
 </body>
 
 </html>
